--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
 		"uuid": "^9.0.0",
-		"markdown-it": "^13.0.1"
+		"markdown-it": "^13.0.1",
+		"markdown-it-emoji": "^2.0.2"
 	},
 
   "repository": {
